# tdc-assistant-client

./: README.md  setup.cfg
src/tdc_assistant_client/: client.py
src/tdc_assistant_client/domain/: __init__.py  annotation.py  base.py  chat_completion.py  chat_completion_annotation.py  chat_completion_approval_status.py  chat_completion_part.py  chat_log.py  code_editor.py  image_capture.py  image_capture_annotation.py  image_capture_type.py  message.py  message_role.py  response_annotation.py  word_processor.py  workspace.py  workspace_annotation.py  workspace_type.py
src/tdc_assistant_client/mutations/: __init__.py  create_chat_completion.py  create_chat_completion_annotation.py  create_chat_log.py  create_code_editor.py  create_image_capture.py  create_image_capture_annotation.py  create_message.py  create_messages.py  create_response_annotation.py  create_word_processor.py  create_workspace.py  create_workspace_annotation.py  request_chat_completion_approval.py  update_chat_completion.py  update_chat_completion_annotation.py  update_chat_completion_part.py  update_chat_log.py  update_code_editor.py  update_word_processor.py  update_workspace.py
src/tdc_assistant_client/queries/: __init__.py  get_chat_log.py  get_chat_logs.py
src/tdc_assistant_client/scalars/: datetime.py
