[metadata]
name = tdc-assistant-client
version = 0.0.1
url = https://github.com/c-c-ca/tdc-assistant-client
author = Adam Carter
author_email = adm.carter@gmail.com
description = A client for TDC Assistant backend
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.11
install_requires =
    aiohttp==3.8.2
    gql==3.4.1

[options.packages.find]
where = src
exclude =
    test*